# manga

./: .gitignore  comic-dl.py  comic_dl.py  flake.nix  manga.py  pyproject.toml  setup.py  view.html  view.py
comic_dl/: __init__.py  download.py  view.html  view.py
manga_dl/: __init__.py  cli.py  constants.py  crawler.py  jobs.py  loader.py  sites.py
scripts/: manga-dl
test/: __init__.py  islieb-archive.html  islieb.html  mangareader.html  mangatown.com-2.html  mangatown.com.html  readmangabat.com.html  taadd.html  xkcd.html
