[project]
name = "comic-dl"
authors = [{ name = "Lucas Hoffmann" }]
version = "0.6-dev"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "flask",
    "lxml",
    "urllib3",
]

[project.scripts]
comic-dl = "comic_dl:main"

[build-system]
requires = [
  "setuptools>=61.0",
  # to include data files based on git
  "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"
